[package]
name = "pallet-rmrk-rpc"
version = "0.0.1"
license = ""
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
scale-info = { version = "2.9.0" }
jsonrpsee = { version = "0.16.2", features = ["server"] }

# primitives
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

# client dependencies
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

rmrk-traits = { default-features = false, path = "../traits" }
pallet-rmrk-rpc-runtime-api = { path = "../rpc-runtime-api" }
